# phobos-cell-map

./: .gitignore  Cargo.toml  license.txt  readme.md
.cargo/: config.toml
cell-map-impl/: Cargo.toml
cell-map-impl/src/: cell_map.rs  iterators.rs  layer.rs  lib.rs
cell-map-impl/src/iterators/: cell_iter.rs  indexed.rs  layered.rs  layered_iter.rs  mod.rs  window.rs
cell-map-macro/: Cargo.toml  readme.md
cell-map-macro/src/: lib.rs
cell-map-macro/tests/: all.rs  layer-fail.rs  layer-pass.rs
examples/: map_rotations_check.rs
src/: cell_map.rs  cell_map_file.rs  docs-latex.html  error.rs  extensions.rs  layer.rs  lib.rs  macros.rs  map_metadata.rs  tests.rs
src/iterators/: indexed.rs  layered.rs  layerers.rs  mod.rs  positioned.rs  slicers.rs  tests.rs
tools/: cell_map.py  plot_line_iter.py  plot_map.py
