[package]
name = "cell-map"
version = "0.1.0"
authors = ["Duncan Hamill <duncanrhamill@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
cell-map-macro = { path = "../cell-map-macro" }