[package]
name = "cell-map-macro"
version = "0.1.0"
authors = ["Duncan Hamill <duncanrhamill@googlemail.com>"]
edition = "2018"
description = "Macros for the cell-map crate"
readme = "readme.md"
homepage = "https://github.com/duncanrhamill/cell-map"
repository = "https://github.com/duncanrhamill/cell-map"
license-file = "license.txt"
keywords = ["maps", "cell", "map", "grid"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/all.rs"

[dependencies]
syn = { version = "1.0", features = ["extra-traits"] }
quote = "1.0"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
cell-map = { path = ".." }